--- a/public/index.css
+++ b/public/index.css
@@ -20,7 +20,7 @@ html {
 }
 
 .light-mode {
-    --background-color: hsl(30, 2%, 33%);
+    --background-color: hsl(30, 2%, 24%);
     --background-color1: hsl(30, 2%, 80%);
     --background-color2: hsl(30, 2%, 85%);
     --background-color3: hsl(30, 2%, 94%);
@@ -57,6 +57,7 @@ hr {
     border: none;
     border-radius: var(--border-radius);
     border-bottom: solid 1px var(--background-color3);
+    margin: 12px 25%;
 }
 
 .short {
@@ -64,8 +65,9 @@ hr {
     margin: 12px auto;
 }
 
-.hrHighlight {
-    border-bottom: solid 2px var(--accent-turquois);
+.hrHighLight {
+    border-bottom: solid 1px var(--background-color3);
+    margin: 36px 25%;
 }
 
 img:not(#logo, #logoStacked, .modalWelcome img, .modalIndex img) {
@@ -296,16 +298,25 @@ textarea {
 
 .main {
     width: calc(100% - 78px);
-    margin: auto auto 12px 75px;
+    margin: auto auto 12px 78px;
 }
 
 .modalWelcome,
 .modalRestore,
 .modalIndex {
+    z-index: 0;
     display: none;
-    width: 50%;
-    margin: auto;
+    width: 700px;
     color: var(--color3);
+}
+
+.modalWelcome,
+.modalRestore {
+    margin: auto;
+}
+
+.modalIndex {
+    margin-left: calc(50% - 389px); /* calc(25% - 39px); */
 }
 
 .modalWelcome img,
@@ -318,13 +329,24 @@ textarea {
     box-shadow: none;
 }
 
+.modalIndex .bubble:hover {
+    filter: none;
+    cursor: default;
+    box-shadow: none;
+}
+
 .modalWelcome img {
     width: 90%;
     max-width: 400px;
 }
 
-.modalRestore h2 {
+.modalWelcome,
+.modalRestore {
+    background-color: var(--background-color1);
+    color: var(--color);
     text-align: center;
+    padding: 24px;
+    border-radius: var(--border-radius);
 }
 
 .modalRestore figure {
@@ -332,10 +354,13 @@ textarea {
 }
 
 .restorable-ticket {
+    padding: 12px;
+    margin: 12px auto;
+    width: 90%;
     background-color: var(--background-color2);
     border-radius: var(--border-radius);
-    padding: 12px;
-    margin: 12px 0;
+    box-shadow: 0 0 6px var(--shadow);
+    text-align: left;
 }
 
 .otLogo {
@@ -652,19 +677,6 @@ textarea {
     color: var(--color3);
 }
 
-/* .modalTicket img:hover,
-.modalFilter img:hover,
-.modalSearch img:hover,
-.modalConfirmDone img:hover,
-.modalSubtaskConfirmDone img:hover,
-.modalSettings img:hover,
-.modalEditSubticket img:hover,
-.modalCreateAccount img:hover,
-.modalLogin img:hover {
-    cursor: pointer;
-    filter: brightness(125%);
-} */
-
 .entry {
     display: none;
 }
@@ -716,6 +728,7 @@ textarea {
 .modalConfirmLogout,
 .modalConfirmDeleteOldTickets {
     display: none;
+    z-index: 5;
     width: 100%;
     min-width: 330px;
     max-width: 600px;
@@ -727,8 +740,7 @@ textarea {
     text-align: center;
 }
 
-.modalConfirmDone,
-.modalSubtaskConfirmDone,
+.modalConfirmDeleteOldTickets,
 .modalWarningDeleteAccount {
     border: solid 6px var(--accent-red);
 }
@@ -762,6 +774,7 @@ textarea {
 
 #alert {
     display: none;
+    z-index: 10;
     position: fixed;
     width: calc(100% - 200px);
     max-width: 400px;
@@ -828,7 +841,7 @@ textarea {
     .modalWelcome,
     .modalRestore,
     .list {
-        margin-top: 72px;
+        margin-top: 84px;
     }
 
     .modalTicket,
@@ -854,7 +867,7 @@ textarea {
     }
 
     .main {
-        margin: auto auto 12px auto;
+        margin: 0 0 12px 0;
         width: 100%;
     }
 
@@ -904,9 +917,18 @@ textarea {
     }
 
     .modalWelcome,
-    .modalRestore,
+    .modalRestore {
+        width: 100%;
+        padding: 24px 0;
+    }
+
+    .modalIndex,
+    .restorable-ticket {
+        width: calc(100% - 24px);
+    }
+
     .modalIndex {
-        width: 90%;
+        margin: auto;
     }
 
 }
