--- a/public/index.css
+++ b/public/index.css
@@ -645,6 +645,14 @@ textarea {
     padding: 6px 6px 0px 6px;
 }
 
+.modalTicket a {
+    color: inherit;
+}
+
+.modalTicket a:hover {
+    color: var(--color);
+}
+
 .settings-grid-container {
     display: grid;
     grid-template-areas:
