--- a/public/index.css
+++ b/public/index.css
@@ -4,11 +4,11 @@ html {
 }
 
 :root {
-    --background-color: hsl(30, 2%, 12%);
-    --background-color1: hsl(30, 2%, 13%);
-    --background-color2: hsl(30, 2%, 18%);
-    --background-color3: hsl(30, 2%, 30%);
-    --color: hsl(30, 2%, 88%);
+    --background-color: hsl(30, 2%, 8%); /* 12 */
+    --background-color1: hsl(30, 2%, 12%); /* 13 */
+    --background-color2: hsl(30, 2%, 15%); /* 18 */
+    --background-color3: hsl(30, 2%, 24%); /* 30 */
+    --color: hsl(30, 2%, 84%);
     --color3: hsl(30, 2%, 67%);
     --accent-turquois: hsl(180, 25%, 50%);
     --accent-red: hsl(0, 50%, 50%);
@@ -21,11 +21,11 @@ html {
 }
 
 .light-mode {
-    --background-color: hsl(30, 2%, 75%);
-    --background-color1: hsl(30, 2%, 80%);
-    --background-color2: hsl(30, 2%, 85%);
-    --background-color3: hsl(30, 2%, 94%);
-    --color: hsl(30, 2%, 12%);
+    --background-color: hsl(30, 2%, 70%); /* 70 */
+    --background-color1: hsl(30, 2%, 85%); /* 80 */
+    --background-color2: hsl(30, 2%, 90%); /* 85 */
+    --background-color3: hsl(30, 2%, 100%); /* 94 */
+    --color: hsl(30, 2%, 20%);
     --color3: hsl(30, 2%, 33%);
     --accent-turquois: hsl(180, 75%, 25%);
     --accent-red: hsl(0, 50%, 50%);
@@ -242,7 +242,6 @@ textarea {
 
 .green {
     color: var(--accent-turquois);
-    font-weight: bold;
 }
 
 .small {
